gcc/testsuite/gcc.dg/gomp/macro-4.c
@@ -3,7 +3,7 @@
 /* { dg-options "-fopenmp -Wunknown-pragmas" } */
 
 #define p		_Pragma ("omp parallel")
-#define omp_p		_Pragma ("omp p")
+#define omp_p		_Pragma ("omp p") /* { dg-warning "ignoring '#pragma omp _Pragma'" } */
 
 void bar (void);
 
@@ -12,18 +12,18 @@ foo (void)
 {
 #pragma omp p		/* { dg-warning "-:ignoring '#pragma omp _Pragma'" } */
     bar ();
-  omp_p			/* { dg-warning "-:ignoring '#pragma omp _Pragma'" } */
+  omp_p			/* { dg-note "in expansion of macro 'omp_p'" } */
     bar ();
 }
 
 #define parallel	serial
-#define omp_parallel	_Pragma ("omp parallel")
+#define omp_parallel	_Pragma ("omp parallel") /* { dg-warning "ignoring '#pragma omp serial'" } */
 
 void
 baz (void)
 {
 #pragma omp parallel	/* { dg-warning "-:ignoring '#pragma omp serial'" } */
     bar ();
-  omp_parallel		/* { dg-warning "-:ignoring '#pragma omp serial'" } */
+    omp_parallel        /* { dg-note "in expansion of macro 'omp_parallel'" } */
     bar ();
 }
